Fri Apr 26 2024 arton
 * ext/rjb.c
	RJB_VERSION -> 1.7.2
 * ext/extconf.rb	
	change javah and javac console encoding according to the locale (reported by winezer0)
 * ext/load.c
	fix win32 and cygwin JVM path detection (reported by winezer0)
 * setup.rb
	remove duplicate line
Sun Apr 14 2024 arton
 * ext/rjb.c
	RJB_VERSION -> 1.7.1
 * lib/rjb/extension.rb
	skip $LOAD_PATH check if absolute path was given
 * test/exttest.rb
	add absolute path test
Sun Apr 14 2024 arton
 * ext/rjb.c
	RJB_VERSION -> 1.7.0
	java2jniname replaces second '.' to '$' for nested/inner classes
 * test/test.rb
	add test_load_nested/inner_class_as_java_naming_convention
Thu Nov 9 2023 arton
 * ext/rjb.c
	RJB_VERSION -> 1.6.9
 * ext/riconv.c
	fix CESU-8 check
 * test/test.rb
	add test_jav_hangul_syllable for checking CESU-8 bug (char start with 0xed)
Thu Sep 28 2023 chaddow
 #93 fake allocation framework to remove T_DATA warning
 * ext/rjb.c
	call rb_undef_alloc_fund if HAV_RB_DEFINE_ALLOC_FUNC
Wed Mar 1 2023 mahendrapk
 Fix typo and broken URI
 * README.md
 * readme.txt
Wed Feb 15 2023 geekontheway
 Fix aarch64 checking exception
 * ext/load.c
	put defined directive on one line
 * ext/rjb.c
	RJB_VERSION -> 1.6.7 (for Gem)
Mon Dec 26 2022 chaadow
 ruby 3.2 support
 * ext/extconf.rb
	call File.exist? instead of deprecated File.exists?
 * ext/rjb.c
	RJB_VERSION -> 1.6.6 (for Gem)
Fri Apr 8 2022 arton
 fix #85
 * data/rjb/jp/co/infoseek/hp/arton/rjb/RBridge.class
	Gem rebuild by original  binary (build by javac 1.4.2)
 * ext/rjb.c
	RJB_VERSION -> 1.6.5 (not changed any other codes but for Gem)
Sun Feb 7 2021 arton
 * ext/extconf.rb
	use javah if `javac -version` didn't return the version number (ex. 1.4.2)
 * ext/rjb.c
	RJB_VERSION -> 1.6.4
Sun Feb 7 2021 arton
 * ext/extconf.rb
	check javac and javah version
 * ext/rjb.c
	RJB_VERSION -> 1.6.3
Sat Aug 1 2020 arton
 * ext/rjb.c
	RJB_VERSION -> 1.6.2
 * ext/load.c
	support OpenJDK directory structure (without jre)
 * lib/rjb.rb